// This source file has been modified by The OpenSDS Authors.
// Copyright 2019 The OpenSDS Authors.
//
// Copyright 2015, Google Inc.
// All rights reserved.
//
// Redistribution and use in source and binary forms, with or without
// modification, are permitted provided that the following conditions are
// met:
//
//     * Redistributions of source code must retain the above copyright
// notice, this list of conditions and the following disclaimer.
//     * Redistributions in binary form must reproduce the above
// copyright notice, this list of conditions and the following disclaimer
// in the documentation and/or other materials provided with the
// distribution.
//     * Neither the name of Google Inc. nor the names of its
// contributors may be used to endorse or promote products derived from
// this software without specific prior written permission.
//
// THIS SOFTWARE IS PROVIDED BY THE COPYRIGHT HOLDERS AND CONTRIBUTORS
// "AS IS" AND ANY EXPRESS OR IMPLIED WARRANTIES, INCLUDING, BUT NOT
// LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND FITNESS FOR
// A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL THE COPYRIGHT
// OWNER OR CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL,
// SPECIAL, EXEMPLARY, OR CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT
// LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR SERVICES; LOSS OF USE,
// DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY
// THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
// (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
// OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.

syntax = "proto3";

package proto;


service Controller {


    // Get metrics from Prometheus
    rpc GetMetrics (GetMetricsOpts) returns (GenericResponse){}

    // Collect metrics from metrics driver
    rpc CollectMetrics (CollectMetricsOpts) returns (GenericResponse){}

    // Get 3rd party re-direct URLs for telemetry
    rpc GetUrls (NoParams) returns (GenericResponse){}
}

service ProvisionDock {


    // Collect metrics from metrics driver
    rpc CollectMetrics (CollectMetricsOpts) returns (GenericResponse){}

    // Get metrics from Prometheus
    rpc GetMetrics (GetMetricsOpts) returns (GenericResponse){}

    // Get 3rd party re-direct URLs for telemetry
    rpc GetUrls (NoParams) returns (GenericResponse){}
}

// Generic response, it return:
// 1. Return result with message when create/update resource successfully.
// 2. Return result without message when delete resource successfully.
// 3. Return Error with error code and message when operate unsuccessfully.
message GenericResponse {
    message Result {
        string message = 1;
    }

    message Error {
        string code = 1;
        string description = 2;
    }

    oneof reply {
        Result result = 1;
        Error error = 2;
    }
}

// GetMetricsOpts is used to pass specifics to get metric values
message GetMetricsOpts {
    // instance ID of the resource to collect metrics for
    string instanceId = 1;
    // the metric to be collected
    string metricName = 2;
    // the start of the time range to collect metrics
    string startTime = 3;
    // the end of the time range to collect metrics
    string endTime = 4;
    // context
    string context = 5;
}

// CollectMetricsOpts is used to pass specifics to collect metric values
message CollectMetricsOpts {
    // instance ID of the resource to collect metrics for
    string instanceId = 1;
    // the metrics to be collected
    repeated string metricNames = 2;
    // context
    string context = 3;
    // metrics driver
    string driverName = 4;
}

message NoParams {}
